force-app/main/default/objects/Account/fields/Community_URL_Formula__c.field-meta.xml
<CustomField>
    <fullName>Community_URL_Formula__c</fullName>
    <formula>SUBSTITUTE(LEFT( $Api.Partner_Server_URL_600 , FIND(&quot;/services&quot;,$Api.Partner_Server_URL_600 ) ),

&apos;.salesforce.com/&apos;, &apos;.site.com/permits/s/&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Community URL Formula</label>
    <type>Text</type>
</CustomField>