force-app/main/default/objects/Account/fields/Date_of_IRS_Determination_Letter__c.field-meta.xml
<CustomField>
    <fullName>Date_of_IRS_Determination_Letter__c</fullName>
    <label>Date of IRS Determination Letter</label>
    <type>Date</type>
</CustomField>