force-app/main/default/objects/Account/fields/Development_owned_or_sponsored_by_CBDO__c.field-meta.xml
<CustomField>
    <fullName>Development_owned_or_sponsored_by_CBDO__c</fullName>
    <inlineHelpText>Will development be owned or sponsored by a Community Based Development Organization (CBDO)?</inlineHelpText>
    <label>Development owned or sponsored by CBDO?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>