force-app/main/default/objects/Account/fields/Development_owned_or_sponsored_by_CHDO__c.field-meta.xml
<CustomField>
    <fullName>Development_owned_or_sponsored_by_CHDO__c</fullName>
    <inlineHelpText>Will development be owned or sponsored by a Community Housing Development Organization (CHDO)?</inlineHelpText>
    <label>Development owned or sponsored by CHDO?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>