force-app/main/default/objects/Account/fields/DFD_Street_Address_Line_1__c.field-meta.xml
<CustomField>
    <fullName>DFD_Street_Address_Line_1__c</fullName>
    <label>Street Address Line 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>