force-app/main/default/objects/Account/fields/Entity_Designation__c.field-meta.xml
<CustomField>
    <fullName>Entity_Designation__c</fullName>
    <label>Entity Designation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Subrecipient</fullName>
            </value>
            <value>
                <fullName>Contractor</fullName>
            </value>
            <value>
                <fullName>Beneficiary</fullName>
            </value>
            <value>
                <fullName>Recipient</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>