force-app/main/default/objects/Account/fields/fostering_low_income_housing_listed__c.field-meta.xml
<CustomField>
    <fullName>fostering_low_income_housing_listed__c</fullName>
    <inlineHelpText>Is &quot;fostering low-income housing&quot; listed among the nonprofit&apos;s purposes in Articles of Incorporation and/or By-Laws?</inlineHelpText>
    <label>&quot;fostering low-income housing&quot; listed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>