force-app/main/default/objects/Account/fields/Internal_Revenue_Code_Designation__c.field-meta.xml
<CustomField>
    <fullName>Internal_Revenue_Code_Designation__c</fullName>
    <label>Internal Revenue Code Designation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>