force-app/main/default/objects/Account/fields/Is_firm_a_certified_Minority_owned_Busin__c.field-meta.xml
<CustomField>
    <fullName>Is_firm_a_certified_Minority_owned_Busin__c</fullName>
    <label>Certified Minority-owned Business</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>