force-app/main/default/objects/Account/fields/Is_firm_a_certified_Women_owned_Business__c.field-meta.xml
<CustomField>
    <fullName>Is_firm_a_certified_Women_owned_Business__c</fullName>
    <label>Is firm a certified Women-owned Business</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>