force-app/main/default/objects/Account/fields/Is_the_CBDO_designation_from_CDA__c.field-meta.xml
<CustomField>
    <fullName>Is_the_CBDO_designation_from_CDA__c</fullName>
    <label>Is the CBDO designation from CDA?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>