force-app/main/default/objects/Account/fields/Is_this_entity_registered_with_SAM_gov__c.field-meta.xml
<CustomField>
    <fullName>Is_this_entity_registered_with_SAM_gov__c</fullName>
    <label>Is this entity registered with SAM.gov?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>