force-app/main/default/objects/Account/fields/Legal_Form_Other__c.field-meta.xml
<CustomField>
    <fullName>Legal_Form_Other__c</fullName>
    <label>Type of Entity Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>