force-app/main/default/objects/Account/fields/MBE_Certification_Number__c.field-meta.xml
<CustomField>
    <fullName>MBE_Certification_Number__c</fullName>
    <label>MBE Certification Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>