force-app/main/default/objects/Account/fields/Non_Profit_Designation_registered_w_MO__c.field-meta.xml
<CustomField>
    <fullName>Non_Profit_Designation_registered_w_MO__c</fullName>
    <label>Non-Profit Designation Registered w/ MO</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>