force-app/main/default/objects/Account/fields/NP_determination_made_by_th__c.field-meta.xml
<CustomField>
    <fullName>NP_determination_made_by_th__c</fullName>
    <inlineHelpText>Has a non-profit determination been made by the Internal Revenue Service?</inlineHelpText>
    <label>NP Determination made by the IRS</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>