force-app/main/default/objects/Account/fields/Number_of_Years_in_Operation__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Years_in_Operation__c</fullName>
    <label>Number of Years in Operation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>