force-app/main/default/objects/Account/fields/Role_of_the_non_profit_sponsor__c.field-meta.xml
<CustomField>
    <fullName>Role_of_the_non_profit_sponsor__c</fullName>
    <inlineHelpText>Explain the role and activities of the non-profit sponsor in the project</inlineHelpText>
    <label>Role of the non-profit sponsor</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>