force-app/main/default/objects/Account/fields/SAM_gov_ID__c.field-meta.xml
<CustomField>
    <fullName>SAM_gov_ID__c</fullName>
    <label>SAM.gov ID</label>
    <length>12</length>
    <type>Text</type>
</CustomField>