force-app/main/default/objects/Account/fields/UEI_Number__c.field-meta.xml
<CustomField>
    <fullName>UEI_Number__c</fullName>
    <label>UEI Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>