force-app/main/default/objects/Account/fields/WBE_Certification_Number__c.field-meta.xml
<CustomField>
    <fullName>WBE_Certification_Number__c</fullName>
    <label>WBE Certification Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>