force-app/main/default/objects/Account/recordTypes/Organizations.recordType-meta.xml
<RecordType>
    <fullName>Organizations</fullName>
    <active>true</active>
    <label>Organizations</label>
</RecordType>